--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.container {
+  margin: 20px;
+}
+
+.border {
+  padding: 5px;
+  border: 0.1px dashed black;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
